ui/components/multichain/dapp-connection-control-bar/index.scss
.dapp-connection-control-bar {
  flex-shrink: 0;
  background-color: var(--color-background-default);
  border-top: 1px solid var(--color-border-muted);

  &__left-group {
    min-width: 0; // allow truncation
  }

  &__identity {
    min-width: 0;
    flex: 1 1 0;
    padding-bottom: 2px;
  }

  &__favicon-wrapper {
    position: relative;
    flex-shrink: 0;
  }

  &__connection-dot {
    position: absolute;
    bottom: 5px;
    right: 0;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: var(--color-success-default);
    border: 2px solid var(--color-background-default);
  }

  &__network-button {
    cursor: pointer;
    border: 1px solid var(--color-border-muted);
    border-radius: 12px;
    background-color: var(--color-background-muted);
    height: 36px;
    flex-shrink: 0;
    justify-content: center;
    padding-left: 9px;
    padding-right: 9px;
    margin-bottom: 4px;

    &:hover {
      background-color: var(--color-background-hover);
    }

    > * {
      border: none !important;
      box-shadow: none;
      background-color: transparent !important;
    }
  }

  &__network-icon {
    width: 1.25rem !important;
    height: 1.25rem !important;
    border-radius: 0.375rem !important;
  }

  &__combined-actions {
    border: 1px solid var(--color-border-muted);
    border-radius: 12px;
    background-color: var(--color-background-muted);
    height: 36px;
    flex-shrink: 0;
    margin-bottom: 4px;
  }

  &__action-button {
    cursor: pointer;
    background: none;
    border: none;
    height: 100%;
    width: 34px;
    justify-content: center;
    flex-shrink: 0;
    border-radius: 12px;

    &:hover {
      background-color: var(--color-background-hover);
    }
  }

  &__divider {
    width: 1px;
    height: 18px;
    margin-bottom: 8px;
    background-color: var(--color-border-muted);
    flex-shrink: 0;
  }
}

